[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu"
version = "2025.05.06"
description = "A short description of the cycu25305 package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="Cheng-Tao Yang", email="ctyang@rosa.systems" }
]
license = { text = "MIT" }
dependencies = [
    "greenlet==3.2.2",
    "playwright==1.52.0",
    "pyee==13.0.0",
    "typing_extensions==4.13.2"
]

[project.urls]
"Homepage" = "https://your-homepage-url.com"
"Source" = "https://github.com/your-username/your-repo"