[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu11022233"
version = "2025.05.06"
description = "台北市公車查詢系統"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="張翔禎土木四乙11022233", email="a30453332@gmail.com" }
]
license = "MIT"
dependencies = [
    "attrs==25.3.0",
    "branca==0.8.1",
    "build==1.2.2.post1",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "DateTime==5.5",
    "docutils==0.21.2",
    "folium==0.20.0",
    "fonttools==4.57.0",
    "greenlet==3.2.0",
    "h11==0.16.0",
    "id==1.5.0",
    "idna==3.10",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "Jinja2==3.1.6",
    "keyring==25.6.0",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "mdurl==0.1.2",
    "more-itertools==10.7.0",
    "nh3==0.2.21",
    "numpy==2.2.4",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "playwright==1.51.0",
    "pycparser==2.22",
    "pyee==12.1.1",
    "Pygments==2.19.1",
    "pyparsing==3.2.3",
    "pyproject_hooks==1.2.0",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "readme_renderer==44.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "scipy==1.15.2",
    "selenium==4.33.0",
    "setuptools==78.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "twine==6.1.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "xyzservices==2025.4.0",
    "zope.interface==7.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cycu11022233"]

[project.urls]
Homepage = "https://your-homepage-url.com"
Source = "https://github.com/your-username/your-repo"